Detalhes sys feiras e senac saude

--- a/projetos/eastport.html
+++ b/projetos/eastport.html
@@ -59,51 +59,64 @@
             <a type="button" class="btn-back" href="index.html"></a>
         </div> 
         <div class="cont">
-            <div class="head-project">
-                <h1>Easy Portifólio</h1>
-                <div class="project-status danger">
-                    Em Análise
-                </div>
+          <div class="head-project">
+              <h1>Easy Portifólio</h1>
+              <div class="project-status danger">
+                  Em Análise
+              </div>
+          </div>
+          <p><b>Descrição: </b>O Easy Portfólio é um sistema online de criação e edição de portifólio.</p>
+          <div class="project-detail">
+              <div>
+                  <h5>Funcionalidades Desenvolvidas:</h5>
+                  <ul>
+                      <li>Dados básicos pessoais e de contato</li>
+                      <li>Controle de Formações</li>
+                      <li>Controle de Experiências</li>
+                      <li>Controle de Habilidades</li>
+                      <li>Controle de Projetos</li>
+                  </ul>
+              </div>
+              <div class="compet-add-container in-project">
+                  <h5>Técnologias utilizadas:</h5>
+                  <div class="compet-add-box">
+                      <div class="compet-add-item">
+                          HTML
+                      </div>
+                      <div class="compet-add-item">
+                          CSS
+                      </div>
+                      <div class="compet-add-item">
+                          Bootstrap
+                      </div>
+                      <div class="compet-add-item">
+                          Java - Javalin
+                      </div>
+                      <div class="compet-add-item">
+                          JavaScript
+                      </div>
+                      <div class="compet-add-item">
+                          Jquery - Ajax
+                      </div>
+                      <div class="compet-add-item">
+                          MySql
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="project-example">
+            <h2>Detalhamento:</h2>
+            <div class="example-box">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos//.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3></h3>
+                <p></p>
+              </div>
             </div>
-            <p><b>Descrição: </b>O Easy Portfólio é um sistema online de criação e edição de portifólio.</p>
-            <div class="project-detail">
-                <div>
-                    <h5>Funcionalidades Desenvolvidas:</h5>
-                    <ul>
-                        <li>Dados básicos pessoais e de contato</li>
-                        <li>Controle de Formações</li>
-                        <li>Controle de Experiências</li>
-                        <li>Controle de Habilidades</li>
-                        <li>Controle de Projetos</li>
-                    </ul>
-                </div>
-                <div class="compet-add-container in-project">
-                    <h5>Técnologias que utilizei:</h5>
-                    <div class="compet-add-box">
-                        <div class="compet-add-item">
-                            HTML
-                        </div>
-                        <div class="compet-add-item">
-                            CSS
-                        </div>
-                        <div class="compet-add-item">
-                            Bootstrap
-                        </div>
-                        <div class="compet-add-item">
-                            Java - Javalin
-                        </div>
-                        <div class="compet-add-item">
-                            JavaScript
-                        </div>
-                        <div class="compet-add-item">
-                            Jquery - Ajax
-                        </div>
-                        <div class="compet-add-item">
-                            MySql
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
