--- a/projetos/escolabas.html
+++ b/projetos/escolabas.html
@@ -76,7 +76,7 @@
                   </ul>
               </div>
               <div class="compet-add-container in-project">
-                  <h5>Técnologias que utilizei:</h5>
+                  <h5>Técnologias utilizadas:</h5>
                   <div class="compet-add-box">
                       <div class="compet-add-item">
                           HTML
@@ -121,7 +121,7 @@
                 <div class="middle-project"></div>
                 <div class="example-text">
                   <h3>Visualização</h3>
-                  <p>As telas de visualização permitem a leitura dos dados detalhados de Disciplinas, Professores e Alunos.</p>
+                  <p>As telas de visualização permitem a leitura dos dados detalhados de Disciplinas, Professores, Alunos e Escola.</p>
                   <p>Além disso, na tela de visualização de disciplinas, é possivel visualizar os alunos matriculados na disciplina, além de permitir a matrticula de novos alunos e desmatricula.</p>
                 </div>
               </div>
