--- a/projetos/ldl.html
+++ b/projetos/ldl.html
@@ -59,52 +59,65 @@
             <a type="button" class="btn-back" href="index.html"></a>
         </div> 
         <div class="cont">
-            <div class="head-project">
-                <h1>Lar Doce Lar</h1>
-                <div class="project-status danger">
-                    Em Análise
-                </div>
+          <div class="head-project">
+              <h1>Lar Doce Lar</h1>
+              <div class="project-status danger">
+                  Em Análise
+              </div>
+          </div>
+          <p><b>Descrição: </b>O Lar doce Lar é um hub composto por sistemas de auxilio familiar, composto por funcionalidades que devem auxiliar no cotidiano.</p>
+          <div class="project-detail">
+              <div>
+                  <h5>Funcionalidades Desenvolvidas:</h5>
+                  <ul>
+                      <li>Controle Finaceiro</li>
+                      <li>Lista de Compras</li>
+                      <li>Lista de Tarefas</li>
+                      <li>Agenda</li>
+                      <li>Integração com Casa Inteligente</li>
+                      <li>Integração com Sistema de Segurança</li>
+                  </ul>
+              </div>
+              <div class="compet-add-container in-project">
+                  <h5>Técnologias utilizadas:</h5>
+                  <div class="compet-add-box">
+                      <div class="compet-add-item">
+                          HTML
+                      </div>
+                      <div class="compet-add-item">
+                          CSS
+                      </div>
+                      <div class="compet-add-item">
+                          JavaScript
+                      </div>
+                      <div class="compet-add-item">
+                          Bootstrap
+                      </div>
+                      <div class="compet-add-item">
+                          Java
+                      </div>
+                      <div class="compet-add-item">
+                          React
+                      </div>
+                      <div class="compet-add-item">
+                          MySql
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="project-example">
+            <h2>Detalhamento:</h2>
+            <div class="example-box">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos//.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3></h3>
+                <p></p>
+              </div>
             </div>
-            <p><b>Descrição: </b>O Lar doce Lar é um hub composto por sistemas de auxilio familiar, composto por funcionalidades que devem auxiliar no cotidiano.</p>
-            <div class="project-detail">
-                <div>
-                    <h5>Funcionalidades Desenvolvidas:</h5>
-                    <ul>
-                        <li>Controle Finaceiro</li>
-                        <li>Lista de Compras</li>
-                        <li>Lista de Tarefas</li>
-                        <li>Agenda</li>
-                        <li>Integração com Casa Inteligente</li>
-                        <li>Integração com Sistema de Segurança</li>
-                    </ul>
-                </div>
-                <div class="compet-add-container in-project">
-                    <h5>Técnologias que utilizei:</h5>
-                    <div class="compet-add-box">
-                        <div class="compet-add-item">
-                            HTML
-                        </div>
-                        <div class="compet-add-item">
-                            CSS
-                        </div>
-                        <div class="compet-add-item">
-                            JavaScript
-                        </div>
-                        <div class="compet-add-item">
-                            Bootstrap
-                        </div>
-                        <div class="compet-add-item">
-                            Java
-                        </div>
-                        <div class="compet-add-item">
-                            React
-                        </div>
-                        <div class="compet-add-item">
-                            MySql
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
