--- a/projetos/sensaud.html
+++ b/projetos/sensaud.html
@@ -67,42 +67,135 @@
             </div>
             <p><b>Descrição: </b>O Senac Saúde foi o projeto integrador e trabalho final do curso técnico no Senac, o projeto focou no trabalho em equipe e desenvolvimento de uma aplicação hospitalar.</p>
             <div class="project-detail">
-                <div>
-                    <h5>Funcionalidades Desenvolvidas:</h5>
-                    <ul>
-                        <li>Sistema de Login</li>
-                        <li>Controle de Usuários</li>
-                        <li>Controle de Estoque</li>
-                        <li>Controle de Protuários</li>
-                    </ul>
-                </div>
-                <div class="compet-add-container in-project">
-                    <h5>Técnologias que utilizei:</h5>
-                    <div class="compet-add-box">
-                        <div class="compet-add-item">
-                            HTML
-                        </div>
-                        <div class="compet-add-item">
-                            CSS
-                        </div>
-                        <div class="compet-add-item">
-                            Bootstrap
-                        </div>
-                        <div class="compet-add-item">
-                            PHP
-                        </div>
-                        <div class="compet-add-item">
-                            JavaScript
-                        </div>
-                        <div class="compet-add-item">
-                            Jquery - Ajax
-                        </div>
-                        <div class="compet-add-item">
-                            MySql
-                        </div>
-                    </div>
-                </div>
+              <div>
+                  <h5>Funcionalidades Desenvolvidas:</h5>
+                  <ul>
+                      <li>Sistema de Login</li>
+                      <li>Sistema de Notificações</li>
+                      <li>Controle de Usuários</li>
+                      <li>Controle de Estoque</li>
+                      <li>Controle de Protuários</li>
+                  </ul>
+              </div>
+              <div class="compet-add-container in-project">
+                  <h5>Técnologias utilizadas:</h5>
+                  <div class="compet-add-box">
+                      <div class="compet-add-item">
+                          HTML
+                      </div>
+                      <div class="compet-add-item">
+                          CSS
+                      </div>
+                      <div class="compet-add-item">
+                          Bootstrap
+                      </div>
+                      <div class="compet-add-item">
+                          PHP
+                      </div>
+                      <div class="compet-add-item">
+                          JavaScript
+                      </div>
+                      <div class="compet-add-item">
+                          Jquery - Ajax
+                      </div>
+                      <div class="compet-add-item">
+                          MySql
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="project-example fontsize-2">
+            <h2>Detalhamento:</h2>
+            <div class="example-box">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos/senacSaude/login.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3>Sistema de Login</h3>
+                <p>O login da plataforma é feito de acordo com a categoria do usuário, além também de ser possivel selecionar a unidade que se deseja trabalhar.</p>
+              </div>
             </div>
+            <div class="example-box invert">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos/senacSaude/home.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3>Página inicial/Notificações</h3>
+                <p>A página inicial contém links rápidos para todos os módulos do sistema.</p>
+                <p>Além disso, as notificações podem ser visualizadas em qualquer parte do sistema.</p>
+              </div>
+            </div>
+            <div class="example-box">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos/senacSaude/recepcao.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3>Recepção</h3>
+                <p>Onde tem a lista de paciêntes e formulário para recepção de novos paciêntes.</p>
+                <p>Na recepção se inicia a criação dos prontuários.</p>
+              </div>
+            </div>
+            <div class="example-box invert">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos/senacSaude/triagem.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3>Triagem</h3>
+                <p>Lista os pacientes a serem atendidos na triagem.</p>
+                <p>Atualiza os prontuários agora com os dados da triagen.</p>
+              </div>
+            </div>
+            <div class="example-box">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos/senacSaude/consulta.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3>Consulta</h3>
+                <p>Lista os pacientes a serem atendidos.</p>
+                <p>Visualiza os dados do paciente agora.</p>
+                <p>Atualiza os prontuários agora com os dados da consulta</p>
+              </div>
+            </div>
+            <div class="example-box invert">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos/senacSaude/historico.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3>Histórico</h3>
+                <p>Visualização completa dos prontuários.</p>
+              </div>
+            </div>
+            <div class="example-box">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos/senacSaude/estoque.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3>Estoque</h3>
+                <p>Controle geral dos insumos do hospital com detalhes de validade.</p>
+              </div>
+            </div>
+            <div class="example-box invert">
+              <div class="example-img">
+                <img class="wrapper-image-project" src="../img/projetos/senacSaude/usuario.png"/>
+              </div>
+              <div class="middle-project"></div>
+              <div class="example-text">
+                <h3>Controle de Usuários</h3>
+                <p>Controla os usuários cadastrados na plataforma, além de controlar os módulos que eles têm acesso.</p>
+              </div>
+            </div>
+            <div class="example-text more-details">
+              <h3>Mais Detalhes</h3>
+              <p>Neste projeto, fiquei mais responsável pelo back-end, porém participei ativamente no front-end também.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
