--- a/projetos/sysfeir.html
+++ b/projetos/sysfeir.html
@@ -70,15 +70,15 @@
                 <div>
                     <h5>Funcionalidades Desenvolvidas:</h5>
                     <ul>
-                        <li>Controle de Vendas</li>
-                        <li>Sistema de Filas</li>
-                        <li>Controle de Estoque</li>
-                        <li>Geração de Ralatórios</li>
-                        <li>Plataforma para Clientes</li>
+                      <li>Controle de Vendas</li>
+                      <li>Geração de Ralatórios</li>
+                        <li>Sistema de Filas(Em Análise)</li>
+                        <li>Controle de Estoque(Em Análise)</li>
+                        <li>Plataforma para Clientes(Em Análise)</li>
                     </ul>
                 </div>
                 <div class="compet-add-container in-project">
-                    <h5>Técnologias que utilizei:</h5>
+                    <h5>Técnologias utilizadas:</h5>
                     <div class="compet-add-box">
                         <div class="compet-add-item">
                             HTML
@@ -103,6 +103,79 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="wrapper-project">
+              <div class="project-example">
+                <h2>Detalhamento:</h2>
+                <div class="example-box">
+                  <div class="example-img">
+                    <img class="wrapper-image-project" src="../img/projetos/sysFeiras/login.png"/>
+                  </div>
+                  <div class="middle-project"></div>
+                  <div class="example-text">
+                    <h3>Login</h3>
+                    <p>O sistema é dividido entre Administrador e Vendedor.</p>
+                    <ul>
+                      <li>O administrador tem acesso total às funcionalidades da plataforma, podendo controlar usuários, gerenciar produtos, visualizar relatórios e administrar as vendas;</li>
+                      <li>O Vendedor tem acesso ao painel de vendas e à visualização dos relatórios.</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="example-box invert">
+                  <div class="example-img">
+                    <img class="wrapper-image-project" src="../img/projetos/sysFeiras/vendas.png"/>
+                  </div>
+                  <div class="middle-project"></div>
+                  <div class="example-text">
+                    <h3>Painel de Vendas</h3>
+                    <p>O vendedor pode selecionar o produto a ser vendido, mudar a quantidade e adcionar uma observação e o registrar na venda, posteriormente pode editar os produtos registrados.</p>
+                    <p>Ao finalizar a venda o vendedor seleciona os métodos de pagamento realizados e seus respectivos valores recebidos</p>
+                  </div>
+                </div>
+                <div class="example-box">
+                  <div class="example-img">
+                    <img class="wrapper-image-project" src="../img/projetos/sysFeiras/relatorios.png"/>
+                  </div>
+                  <div class="middle-project"></div>
+                  <div class="example-text">
+                    <h3>Relatórios</h3>
+                    <p>O administrador pode visualizar relatórios de vendas em tempo real para acompanhamento de desempenho.</p>
+                    <p>O administrador pode aplicar filtros para visualizar informações especificas</p>
+                  </div>
+                </div>
+                <div class="example-box invert">
+                  <div class="example-img">
+                    <img class="wrapper-image-project" src="../img/projetos/sysFeiras/produtos.png"/>
+                  </div>
+                  <div class="middle-project"></div>
+                  <div class="example-text">
+                    <h3>Controle de Produtos</h3>
+                    <p>O Administrador gerencia os produtos disponíveis para venda.</p>
+                  </div>
+                </div>
+                <div class="example-box">
+                  <div class="example-img">
+                    <img class="wrapper-image-project" src="../img/projetos/sysFeiras/usuarios.png"/>
+                  </div>
+                  <div class="middle-project"></div>
+                  <div class="example-text">
+                    <h3>Controle de Usuários</h3>
+                    <p>O Administrador tem controle total sobre os usuários cadastrados na plataforma.</p>
+                  </div>
+                </div>
+                <div class="example-text more-details">
+                  <h3>Mais Detalhes</h3>
+                  <p>O sistema visa simplificar informações, deixando-o com um fluxo mais amigável a feirantes.</p>
+                  <p>Ainda está no planejamento a criação de expanções que devem abranger feirantes do ramo alimentício, além de melhorias na plataforma. Os recursos que planejo implementar são:</p>
+                  <ul>
+                    <li><b>Sistema de Filas: </b>Sistema para acompanhar a lista de produtos a serem produzidos;</li>
+                    <li><b>Controle de Estoque: </b>Atualização do módulo de produtos vendidos para um sistema de controle de estoque completo;</li>
+                    <li><b>Plataforma para clientes: </b>cardápio virtual, localização em tempo real de feirantes, sistema de delivery e sistema de acompanhamento de pedido online;</li>
+                    <li><b>Atualização do módulo de relatórios: </b>atualização dos filtros, geração de gráficos;</li>
+                    <li><b>Atualização da plataforma: </b>adição dos módulos de notificações, configurações e personalização.</li>
+                  </ul>
+                </div>
+              </div>
             </div>
         </div>
       </div>
