redef senha add

--- a/projetos/sensaud.html
+++ b/projetos/sensaud.html
@@ -114,6 +114,7 @@
               <div class="example-text">
                 <h3>Sistema de Login</h3>
                 <p>O login da plataforma é feito de acordo com a categoria do usuário, além também de ser possivel selecionar a unidade que se deseja trabalhar.</p>
+                <p>O sistema de login também conta com um sistema de redefinição de senha com validação por email.</p>
               </div>
             </div>
             <div class="example-box invert">
